<resources>
    <string name="app_name">PPCLS</string>
    <string name="action_settings">Settings</string>

    <!-- Login String -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="action_register">Register</string>
    <!-- Menu String -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="menu">Menu</string>
    <string name="game">Lancer le jeu</string>
    <string name="classement">Classement</string>
    <!-- Game String -->
    <string name="pierre">Pierre</string>
    <string name="feuille">Feuille</string>
    <string name="ciseau">Ciseau</string>
    <string name="lezard">Lezard</string>
    <string name="spock">spock</string>
    <string name="player1">player1</string>
    <string name="player2">IA</string>
    <string name="player1score">score1</string>
    <string name="player2score">score2</string>
    <string name="versus">versus</string>
    <string name="Homme">Homme</string>
    <string name="Femme">Femme</string>
    <string name="Email">Email</string>
    <string name="fin">Fin de Partie</string>
    <string name="ordiwin"> Vous avez perdu !</string>
    <string name="win"> Vous avez gagné !</string>
</resources>