<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.FirstFragment">

    <TextView
        android:id="@+id/textMenu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/leaderBoard"
        android:layout_width="234dp"
        android:layout_height="78dp"
        android:layout_marginBottom="252dp"
        android:text="@string/classement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/lancerLeJeu"
        android:layout_width="234dp"
        android:layout_height="78dp"
        android:layout_marginBottom="384dp"
        android:text="@string/game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/difficulte"
        android:layout_width="245dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toTopOf="@+id/lancerLeJeu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMenu"
        app:layout_constraintVertical_bias="0.826" />

    <TextView
        android:id="@+id/textDifficulte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Difficulté de l'IA"
        app:layout_constraintBottom_toTopOf="@+id/difficulte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMenu"
        app:layout_constraintVertical_bias="0.807" />
</androidx.constraintlayout.widget.ConstraintLayout>